<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_bg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_bg">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_dot"
                    android:elevation="@dimen/_2sdp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_110sdp"
                        android:layout_margin="@dimen/_3sdp"
                        android:background="@drawable/bg_reound_white"
                        android:padding="@dimen/_12sdp"
                        android:src="@drawable/app_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_white"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="176dp">

                    <TextView
                        android:id="@+id/WelcomTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_60sdp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:padding="1dp"
                        android:text="@string/welcome_back"
                        android:textColor="@color/heading_font"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.456"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:fontFamily="@font/noto_sans_regular"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/tag_line"
                        android:textColor="@color/semi_title_font"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/WelcomTv" />

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/noto_sans_medium"
                        android:text="@string/name"
                        android:textColor="@color/heading_font"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textTv" />

                    <EditText
                        android:id="@+id/nameEdt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:textCursorDrawable="@drawable/search_cursor"
                        android:fontFamily="@font/noto_sans_regular"
                        android:hint="@string/enter_your_password"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameTv" />

                    <TextView
                        android:id="@+id/emailTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/noto_sans_medium"
                        android:text="@string/email"
                        android:textColor="@color/heading_font"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameEdt" />

                    <EditText
                        android:id="@+id/emailEdt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"                        android:fontFamily="@font/noto_sans_medium"
                        android:hint="@string/enter_your_email"
                        android:padding="5dp"
                         android:textColor="@color/heading_font"
                        android:textCursorDrawable="@drawable/search_cursor"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/emailTv"
                        app:layout_constraintTop_toBottomOf="@+id/emailTv" />

                    <TextView
                        android:id="@+id/passwordTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/noto_sans_medium"
                        android:text="@string/password"
                        android:textColor="@color/heading_font"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailEdt" />

                    <EditText
                        android:id="@+id/passwordEdt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:drawablePadding="1dp"
                        android:textCursorDrawable="@drawable/search_cursor"
                        android:fontFamily="@font/noto_sans_medium"
                        android:hint="@string/enter_your_password"
                        android:padding="5dp"
                        android:textColor="@color/heading_font"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordTv" />

                    <ImageView
                        android:id="@+id/menuBtn"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/icn_hide_password"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                        app:layout_constraintTop_toTopOf="@+id/passwordEdt" />

                    <Button
                        android:id="@+id/SignInBtn"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_60sdp"
                        android:background="@drawable/btn_background"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                        app:layout_constraintStart_toStartOf="@+id/passwordEdt"
                        app:layout_constraintTop_toBottomOf="@+id/passwordEdt" />

                    <TextView
                        android:id="@+id/alreadyAccTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:padding="2dp"
                        android:text="@string/already_have_a_account"
                        android:textColor="@color/primary_bg"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/SignInBtn"
                        app:layout_constraintStart_toStartOf="@+id/SignInBtn"
                        app:layout_constraintTop_toBottomOf="@+id/SignInBtn" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>