<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_dot"
                android:elevation="2dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_reound_white"
                    android:padding="12dp"
                    android:src="@drawable/app_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_white"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/WelcomTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/noto_sans_bold"
                    android:padding="1dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/heading_font"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.456"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/noto_sans_regular"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tag_line"
                    android:textColor="@color/semi_title_font"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.456"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/WelcomTv" />


                <TextView
                    android:id="@+id/emailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/noto_sans_medium"
                    android:text="@string/email"
                    android:textColor="@color/heading_font"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textTv" />

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edit_text_selector"
                    android:fontFamily="@font/noto_sans_regular"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textCursorDrawable="@drawable/search_cursor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailTv" />

                <TextView
                    android:id="@+id/passwordTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/noto_sans_medium"
                    android:text="@string/password"
                    android:textColor="@color/heading_font"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailEdt" />

                <EditText
                    android:id="@+id/passwordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edit_text_selector"
                    android:drawablePadding="1dp"
                    android:fontFamily="@font/noto_sans_regular"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textCursorDrawable="@drawable/search_cursor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTv" />

                <ImageView
                    android:id="@+id/password_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_visibility_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                    app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                    app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                    app:tint="@color/heading_font" />

                <ImageView
                    android:id="@+id/password_toggleOff"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="?actionBarItemBackground"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    app:layout_constraintBottom_toBottomOf="@+id/passwordEdt"
                    app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                    app:layout_constraintTop_toTopOf="@+id/passwordEdt"
                    app:tint="@color/heading_font" />

                <Button
                    android:id="@+id/SignInBtn"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:background="@drawable/btn_background"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                    app:layout_constraintStart_toStartOf="@+id/passwordEdt"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEdt" />

                <!--                    <com.google.android.material.textfield.TextInputLayout-->
                <!--                        android:id="@+id/inputPassword"-->
                <!--                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="60dp"-->
                <!--                        app:counterMaxLength="12"-->
                <!--                        android:layout_marginHorizontal="10dp"-->
                <!--                        android:layout_marginTop="10dp"-->
                <!--                        android:hint="Password"-->
                <!--                        app:startIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"-->
                <!--                        app:passwordToggleEnabled="true"-->
                <!--                        tools:ignore="MissingConstraints">-->

                <!--                        <com.google.android.material.textfield.TextInputEditText-->
                <!--                            android:id="@+id/edtPassword"-->
                <!--                            android:layout_width="match_parent"-->
                <!--                            android:layout_height="wrap_content"-->
                <!--                            android:inputType="textPassword" />-->
                <!--                    </com.google.android.material.textfield.TextInputLayout>-->


                <TextView
                    android:id="@+id/forgotPsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="2dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primary_bg"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/SignInBtn"
                    app:layout_constraintStart_toStartOf="@+id/SignInBtn"
                    app:layout_constraintTop_toBottomOf="@+id/SignInBtn" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPsTxt">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:padding="2dp"
                        android:text="@string/do_sign_up"
                        android:textColor="@color/semi_title_font"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
                        app:layout_constraintStart_toStartOf="@+id/SignInBtn"
                        app:layout_constraintTop_toBottomOf="@+id/forgotPsTxt"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:padding="@dimen/_1sdp"
                        android:paddingStart="10dp"
                        android:text="@string/Sign_Up"
                        android:textColor="@color/primary_bg"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView20"
                        app:layout_constraintEnd_toEndOf="@+id/SignInBtn"
                        app:layout_constraintTop_toBottomOf="@+id/forgotPsTxt" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

