<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/light_transprate"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:background="@drawable/white_10bg"
            android:elevation="@dimen/_2sdp"
            android:padding="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".4">

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/app_name"
                android:textColor="@color/primary_bg"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/primary_color_bg_10dp"

                android:padding="@dimen/_10sdp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/okBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message" />

            <Button
                android:id="@+id/okBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/primary_color_bg_10dp"

                android:padding="@dimen/_10sdp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelBtn"
                app:layout_constraintTop_toBottomOf="@+id/message" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
